pod-security/baseline/disallow-host-path/disallow-host-path.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
  annotations:
    policies.kyverno.io/title: Disallow hostPath
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: critical
    policies.kyverno.io/subject: Pod,Volume
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/podsecurity/baseline/disallow-host-path/"
    policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,soc2,iso27001,nsa-cisa,nist-800-53"
    policies.nirmata.io/nsa-cisa-control: "Sec.1.3"
    policies.nirmata.io/nist-800-53-control: "SC-39,CM-7"
    policies.kyverno.io/description: >-
      HostPath volumes let Pods use host directories and volumes in containers.
      Using host resources can be used to access shared data or escalate privileges
      and should not be allowed. This policy ensures no hostPath volumes are in use.
    policies.nirmata.io/remediation: "https://github.com/nirmata/kyverno-policies/tree/main/pod-security/baseline/disallow-host-path/remediate-disallow-host-path.yaml"
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: host-path
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          HostPath volumes are forbidden.
        pattern:
          spec:
            =(volumes):
              - X(hostPath): "null"
