pod-security/baseline/disallow-host-path/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow-host-path.yaml
assert:
- policy-assert.yaml
