pod-security/baseline/disallow-host-path/e2e/bad-pod.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
      - name: udev
        mountPath: /data
  volumes:
  - name: udev
    hostPath:
      path: /etc/udev
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
      - name: udev
        mountPath: /data
      - name: temp
        mountPath: /scratch
  volumes:
  - name: temp
    emptyDir: {}
  - name: udev
    hostPath:
      path: /etc/udev
