pod-security/baseline/disallow-host-path/e2e/good-pod.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    volumeMounts:
      - name: temp
        mountPath: /scratch
  volumes:
  - name: temp
    emptyDir: {}
